--- a/index.html
+++ b/index.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
+
+<div>
+  <h3 class="perro">Bienvenido a Kia Gonzalitos servicio</h3>
+</div>
+
+<div>
 <body>
 <section id="mainTable">
-	<div class="container">
-  <h2>Basic Table</h2>           
+  <h3>Servicio</h3>           
   <table class="table">
     <thead>
       <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
+        <th>Nombre del cliente</th>
+        <th>Vehículo</th>
+        <th>Estatus</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Sorento</td>
+        <td>Entrada</td>
       </tr>
       <tr>
         <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
+        <td>Rio</td>
+        <td>Salida</td>
       </tr>
       <tr>
         <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>Kia Optima</td>
+        <td>Salida</td>
       </tr>
     </tbody>
   </table>
+</section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>   
+</body>
 </div>
 
-</section>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>		
-</body>
 </html>
