fix index error

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div>
 <body>
 <section id="mainTable">
-  <h3>Servicio de karla</h3>           
+  <h3>Servicio</h3>           
   <table class="table">
     <thead>
       <tr>
