--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 <div>
 <body>
 <section id="mainTable">
-  <h3>Servicio</h3>           
+  <h3>Servicio de tu auto</h3>           
   <table class="table">
     <thead>
       <tr>
         <th>Nombre del cliente</th>
         <th>Vehículo</th>
         <th>Estatus</th>
+        <th>Edit</th>
       </tr>
     </thead>
     <tbody>
@@ -29,16 +30,19 @@
         <td>John</td>
         <td>Sorento</td>
         <td>Entrada</td>
+        <td><a href="">Save</a> | <a href="">Delete</a></td>
       </tr>
       <tr>
         <td>Mary</td>
         <td>Rio</td>
         <td>Salida</td>
+        <td><a href="">Save</a> | <a href="">Delete</a></td>
       </tr>
       <tr>
         <td>July</td>
         <td>Kia Optima</td>
         <td>Salida</td>
+        <td><a href="">Save</a> | <a href="">Delete</a></td>
       </tr>
     </tbody>
   </table>
