delete and save services

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <td>
                         <div class="actions">
                         <a href="" ng-click="editing = !editing">Edit</a>
-                        <a href="" ng-click="helloConsole()">Save</a>
-                        <a href="">Delete</a>
+                        <a href="" ng-click="saveCustomer(customer)">Save</a>
+                        <a ng-click="deleteCustomer(customer, $index)" href="">Delete</a>
                     </div>
                     </td>
                 </tr>
