create new customers added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <div>
 <body ng-app="serviceApp">
 <div ng-controller="mainCtrl" class="list">
-
+    <div class="add">
+        <a href="" ng-click="addCustomer()">+ Agregar un cliente nuevo</a>
+    </div>
     <div class="" ng-repeat="customer in customers">
         <table class="table">
 
